--- a/trunk/trace_viewer/tracing/importer/v8/codemap.html
+++ b/trunk/trace_viewer/tracing/importer/v8/codemap.html
@@ -1,15 +1,18 @@
-// Copyright (c) 2012 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2012 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/importer/v8/splaytree.html">
+
+<script>
 'use strict';
-
-tvcm.require('tracing.importer.v8.splaytree');
 
 /**
  * @fileoverview Map addresses to dynamically created functions.
  */
-
 tvcm.exportTo('tracing.importer.v8', function() {
   /**
    * Constructs a mapper that maps addresses into code entries.
@@ -43,19 +46,15 @@ tvcm.exportTo('tracing.importer.v8', function() {
     this.pages_ = [];
   };
 
-
   /**
    * The number of alignment bits in a page address.
    */
   CodeMap.PAGE_ALIGNMENT = 12;
 
-
   /**
    * Page size in bytes.
    */
-  CodeMap.PAGE_SIZE =
-      1 << CodeMap.PAGE_ALIGNMENT;
-
+  CodeMap.PAGE_SIZE = 1 << CodeMap.PAGE_ALIGNMENT;
 
   /**
    * Adds a dynamic (i.e. moveable and discardable) code entry.
@@ -67,7 +66,6 @@ tvcm.exportTo('tracing.importer.v8', function() {
     this.deleteAllCoveredNodes_(this.dynamics_, start, start + codeEntry.size);
     this.dynamics_.insert(start, codeEntry);
   };
-
 
   /**
    * Moves a dynamic code entry. Throws an exception if there is no dynamic
@@ -83,7 +81,6 @@ tvcm.exportTo('tracing.importer.v8', function() {
     this.dynamics_.insert(to, removedNode.value);
   };
 
-
   /**
    * Discards a dynamic code entry. Throws an exception if there is no dynamic
    * code entry with the specified starting address.
@@ -93,7 +90,6 @@ tvcm.exportTo('tracing.importer.v8', function() {
   CodeMap.prototype.deleteCode = function(start) {
     var removedNode = this.dynamics_.remove(start);
   };
-
 
   /**
    * Adds a library entry.
@@ -107,7 +103,6 @@ tvcm.exportTo('tracing.importer.v8', function() {
     this.libraries_.insert(start, codeEntry);
   };
 
-
   /**
    * Adds a static code entry.
    *
@@ -119,7 +114,6 @@ tvcm.exportTo('tracing.importer.v8', function() {
     this.statics_.insert(start, codeEntry);
   };
 
-
   /**
    * @private
    */
@@ -129,7 +123,6 @@ tvcm.exportTo('tracing.importer.v8', function() {
       this.pages_[addr >>> CodeMap.PAGE_ALIGNMENT] = 1;
     }
   };
-
 
   /**
    * @private
@@ -147,14 +140,12 @@ tvcm.exportTo('tracing.importer.v8', function() {
     for (var i = 0, l = to_delete.length; i < l; ++i) tree.remove(to_delete[i]);
   };
 
-
   /**
    * @private
    */
   CodeMap.prototype.isAddressBelongsTo_ = function(addr, node) {
     return addr >= node.key && addr < (node.key + node.value.size);
   };
-
 
   /**
    * @private
@@ -163,7 +154,6 @@ tvcm.exportTo('tracing.importer.v8', function() {
     var node = tree.findGreatestLessThan(addr);
     return node && this.isAddressBelongsTo_(addr, node) ? node.value : null;
   };
-
 
   /**
    * Finds a code entry that contains the specified address. Both static and
@@ -194,7 +184,6 @@ tvcm.exportTo('tracing.importer.v8', function() {
     return null;
   };
 
-
   /**
    * Returns a dynamic code entry using its starting address.
    *
@@ -206,14 +195,12 @@ tvcm.exportTo('tracing.importer.v8', function() {
     return node ? node.value : null;
   };
 
-
   /**
    * Returns an array of all dynamic code entries.
    */
   CodeMap.prototype.getAllDynamicEntries = function() {
     return this.dynamics_.exportValues();
   };
-
 
   /**
    * Returns an array of pairs of all dynamic code entries and their addresses.
@@ -222,7 +209,6 @@ tvcm.exportTo('tracing.importer.v8', function() {
     return this.dynamics_.exportKeysAndValues();
   };
 
-
   /**
    * Returns an array of all static code entries.
    */
@@ -230,14 +216,12 @@ tvcm.exportTo('tracing.importer.v8', function() {
     return this.statics_.exportValues();
   };
 
-
   /**
    * Returns an array of all libraries entries.
    */
   CodeMap.prototype.getAllLibrariesEntries = function() {
     return this.libraries_.exportValues();
   };
-
 
   /**
    * Creates a code entry object.
@@ -253,21 +237,17 @@ tvcm.exportTo('tracing.importer.v8', function() {
     this.nameUpdated_ = false;
   };
 
-
   CodeMap.CodeEntry.prototype.getName = function() {
     return this.name;
   };
-
 
   CodeMap.CodeEntry.prototype.toString = function() {
     return this.name + ': ' + this.size.toString(16);
   };
 
-
   CodeMap.NameGenerator = function() {
     this.knownNames_ = {};
   };
-
 
   CodeMap.NameGenerator.prototype.getName = function(name) {
     if (!(name in this.knownNames_)) {
@@ -281,3 +261,5 @@ tvcm.exportTo('tracing.importer.v8', function() {
     CodeMap: CodeMap
   };
 });
+</script>
+
