--- a/trunk/trace_viewer/tracing/importer/v8_log_importer.html
+++ b/trunk/trace_viewer/tracing/importer/v8_log_importer.html
@@ -1,25 +1,30 @@
-// Copyright (c) 2013 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
+
+<link rel="import" href="/tracing/color_scheme.html">
+<link rel="import" href="/tracing/importer/v8/log_reader.html">
+<link rel="import" href="/tracing/importer/v8/codemap.html">
+
+<script>
 
 'use strict';
+
+tvcm.require('tracing.importer.importer');
 
 /**
  * @fileoverview V8LogImporter imports v8.log files into the provided model.
  */
-tvcm.require('tracing.importer.importer');
 tvcm.require('tracing.trace_model');
 tvcm.require('tracing.trace_model.slice');
-tvcm.require('tracing.color_scheme');
-tvcm.require('tracing.importer.v8.log_reader');
-tvcm.require('tracing.importer.v8.codemap');
 
 tvcm.exportTo('tracing.importer', function() {
-
   var Importer = tracing.importer.Importer;
 
   function V8LogImporter(model, eventData) {
-
     this.importPriority = 3;
     this.model_ = model;
 
@@ -282,3 +287,5 @@ tvcm.exportTo('tracing.importer', function() {
     V8LogImporter: V8LogImporter
   };
 });
+</script>
+
