--- a/trunk/trace_viewer/tracing/importer/etw/eventtrace_parser.html
+++ b/trunk/trace_viewer/tracing/importer/etw/eventtrace_parser.html
@@ -1,16 +1,20 @@
-// Copyright (c) 2014 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2014 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/importer/etw/parser.html">
+
+<script>
 'use strict';
 
 /**
  * @fileoverview Parses EventTrace events in the Windows event trace format.
  */
-tvcm.require('tracing.importer.etw.parser');
 
 tvcm.exportTo('tracing.importer.etw', function() {
-
   var Parser = tracing.importer.etw.Parser;
 
   // Constants for EventTrace events.
@@ -102,3 +106,5 @@ tvcm.exportTo('tracing.importer.etw', function() {
     EventTraceParser: EventTraceParser
   };
 });
+</script>
+
