--- a/trunk/trace_viewer/tracing/importer/etw/parser.html
+++ b/trunk/trace_viewer/tracing/importer/etw/parser.html
@@ -1,7 +1,11 @@
-// Copyright (c) 2014 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2014 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<script>
 'use strict';
 
 /**
@@ -43,7 +47,6 @@
  *
  */
 tvcm.exportTo('tracing.importer.etw', function() {
-
   var subtypeConstructors = [];
 
   /**
@@ -77,5 +80,6 @@ tvcm.exportTo('tracing.importer.etw', function() {
   return {
     Parser: Parser
   };
-
 });
+</script>
+
