--- a/trunk/trace_viewer/tracing/importer/etw/thread_parser_test.html
+++ b/trunk/trace_viewer/tracing/importer/etw/thread_parser_test.html
@@ -1,12 +1,16 @@
-// Copyright (c) 2014 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2014 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/test_utils.html">
+<link rel="import" href="/tracing/importer/etw_importer.html">
+<link rel="import" href="/tracing/importer/etw/thread_parser.html">
+
+<script>
 'use strict';
-
-tvcm.require('tracing.test_utils');
-tvcm.require('tracing.importer.etw_importer');
-tvcm.require('tracing.importer.etw.thread_parser');
 
 tvcm.unittest.testSuite('tracing.importer.etw.thread_parser_test', function() {
 
@@ -171,3 +175,5 @@ tvcm.unittest.testSuite('tracing.importer.etw.thread_parser_test', function() {
 
   });
 });
+</script>
+
