--- a/trunk/trace_viewer/tracing/importer/etw_importer.html
+++ b/trunk/trace_viewer/tracing/importer/etw_importer.html
@@ -1,7 +1,15 @@
-// Copyright (c) 2014 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2014 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/importer/etw/eventtrace_parser.html">
+<link rel="import" href="/tracing/importer/etw/process_parser.html">
+<link rel="import" href="/tracing/importer/etw/thread_parser.html">
+
+<script>
 /**
  * @fileoverview Imports JSON file with the raw payloads from a Windows event
  * trace into the Tracemodel. This format is outputted by Chrome running
@@ -43,12 +51,8 @@
 tvcm.require('tvcm.base64');
 tvcm.require('tracing.trace_model');
 tvcm.require('tracing.importer.importer');
-tvcm.require('tracing.importer.etw.eventtrace_parser');
-tvcm.require('tracing.importer.etw.process_parser');
-tvcm.require('tracing.importer.etw.thread_parser');
 
 tvcm.exportTo('tracing.importer', function() {
-
   var Importer = tracing.importer.Importer;
 
   // GUID and opcode of a Thread DCStart event, as defined at the link above.
@@ -469,5 +473,6 @@ tvcm.exportTo('tracing.importer', function() {
   return {
     EtwImporter: EtwImporter
   };
-
 });
+</script>
+
