--- a/trunk/trace_viewer/tracing/importer/etw_importer_test.html
+++ b/trunk/trace_viewer/tracing/importer/etw_importer_test.html
@@ -1,14 +1,17 @@
-// Copyright (c) 2014 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2014 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/test_utils.html">
+<link rel="import" href="/tracing/importer/etw_importer.html">
+
+<script>
 'use strict';
 
-tvcm.require('tracing.test_utils');
-tvcm.require('tracing.importer.etw_importer');
-
 tvcm.unittest.testSuite('tracing.importer.etw_importer_test', function() {
-
   test('canImport', function() {
     assertFalse(tracing.importer.EtwImporter.canImport('string'));
     assertFalse(tracing.importer.EtwImporter.canImport([]));
@@ -279,5 +282,6 @@ tvcm.unittest.testSuite('tracing.importer.etw_importer_test', function() {
     assertTrue(pid11, 1);
     assertTrue(pid20, 2);
   });
-
 });
+</script>
+
