--- a/trunk/trace_viewer/tracing/importer/trace2html_importer.html
+++ b/trunk/trace_viewer/tracing/importer/trace2html_importer.html
@@ -1,12 +1,17 @@
-// Copyright (c) 2014 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2014 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/trace_model.html">
+<link rel="import" href="/tracing/importer/importer.html">
+<link rel="import" href="/tracing/importer/simple_line_reader.html">
+
+<script>
 'use strict';
 
-tvcm.require('tracing.trace_model');
-tvcm.require('tracing.importer.importer');
-tvcm.require('tracing.importer.simple_line_reader');
 tvcm.require('tvcm.base64');
 
 tvcm.exportTo('tracing.importer', function() {
@@ -29,16 +34,16 @@ tvcm.exportTo('tracing.importer', function() {
     var subtraces = [];
     while (true) {
       if (!r.advanceToLineMatching(
-          /^<script id="viewer-data" type="application\/json">$/))
+          /^<\s*script id="viewer-data" type="application\/json">$/))
         break;
 
       r.beginSavingLines();
-      if (!r.advanceToLineMatching(/^<\/script>$/))
+      if (!r.advanceToLineMatching(/^<\/\s*script>$/))
         return failure;
 
       var raw_events = r.endSavingLinesAndGetResult();
 
-      // Drop off first and last event as it contains the </script> tag.
+      // Drop off first and last event as it contains the end script tag.
       raw_events = raw_events.slice(1, raw_events.length - 1);
       var data64 = raw_events.join('\n');
       var buffer = new ArrayBuffer(
@@ -77,3 +82,5 @@ tvcm.exportTo('tracing.importer', function() {
     Trace2HTMLImporter: Trace2HTMLImporter
   };
 });
+</script>
+
