--- a/trunk/trace_viewer/tracing/importer/trace2html_importer_test.html
+++ b/trunk/trace_viewer/tracing/importer/trace2html_importer_test.html
@@ -1,22 +1,26 @@
-// Copyright (c) 2014 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2014 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/importer/trace2html_importer.html">
+
+<script>
 'use strict';
-
-tvcm.require('tracing.importer.trace2html_importer');
 
 tvcm.unittest.testSuite('tracing.importer.trace2html_importer_test', function() { // @suppress longLineCheck
   test('simple', function() {
     var html_lines = [
       '<!DOCTYPE HTML>',
-      '<script id="viewer-data" type="application/json">',
+      '< script id="viewer-data" type="application/json">',
       btoa('hello'),
-      '</script>',
-      '<script id="viewer-data" type="application/json">',
+      '</ script>',
+      '< script id="viewer-data" type="application/json">',
       btoa('world'),
-      '</script>',
-      '</html>'
+      '</ script>',
+      '</ html>'
     ];
     var html_text = html_lines.join('\n');
     assertTrue(tracing.importer.Trace2HTMLImporter.canImport(html_text));
@@ -34,3 +38,5 @@ tvcm.unittest.testSuite('tracing.importer.trace2html_importer_test', function() 
     assertArrayEquals(['hello', 'world'], subTracesAsStrings);
   });
 });
+</script>
+
