--- a/trunk/trace_viewer/tracing/importer/trace_event_importer.html
+++ b/trunk/trace_viewer/tracing/importer/trace_event_importer.html
@@ -1,7 +1,15 @@
-// Copyright (c) 2012 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2012 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/trace_model.html">
+<link rel="import" href="/tracing/color_scheme.html">
+<link rel="import" href="/tracing/importer/importer.html">
+
+<script>
 'use strict';
 
 /**
@@ -9,9 +17,6 @@
  * into the provided model.
  */
 tvcm.require('tvcm.quad');
-tvcm.require('tracing.trace_model');
-tvcm.require('tracing.color_scheme');
-tvcm.require('tracing.importer.importer');
 tvcm.require('tracing.trace_model.instant_event');
 tvcm.require('tracing.trace_model.flow_event');
 tvcm.require('tracing.trace_model.counter_series');
@@ -1120,3 +1125,5 @@ tvcm.exportTo('tracing.importer', function() {
     TraceEventImporter: TraceEventImporter
   };
 });
+</script>
+
