--- a/trunk/trace_viewer/tracing/importer/trace_event_importer_test.html
+++ b/trunk/trace_viewer/tracing/importer/trace_event_importer_test.html
@@ -1,11 +1,15 @@
-// Copyright (c) 2013 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/test_utils.html">
+<link rel="import" href="/tracing/importer/trace_event_importer.html">
+
+<script>
 'use strict';
-
-tvcm.require('tracing.test_utils');
-tvcm.require('tracing.importer.trace_event_importer');
 
 tvcm.unittest.testSuite('tracing.importer.trace_event_importer_test', function() { // @suppress longLineCheck
   var findSliceNamed = tracing.test_utils.findSliceNamed;
@@ -1739,3 +1743,5 @@ tvcm.unittest.testSuite('tracing.importer.trace_event_importer_test', function()
   // TODO(nduca): one slice, two pids
 
 });
+</script>
+
