--- a/trunk/trace_viewer/tracing/tracks/container_track.html
+++ b/trunk/trace_viewer/tracing/tracks/container_track.html
@@ -1,11 +1,16 @@
-// Copyright (c) 2012 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/tracks/track.html">
+<link rel="import" href="/tracing/filter.html">
+
+<script>
 'use strict';
 
-tvcm.require('tracing.tracks.track');
-tvcm.require('tracing.filter');
 tvcm.require('tvcm.ui');
 
 tvcm.exportTo('tracing.tracks', function() {
@@ -102,3 +107,5 @@ tvcm.exportTo('tracing.tracks', function() {
     ContainerTrack: ContainerTrack
   };
 });
+</script>
+
