--- a/trunk/trace_viewer/tracing/tracks/slice_track_test.html
+++ b/trunk/trace_viewer/tracing/tracks/slice_track_test.html
@@ -1,13 +1,17 @@
-// Copyright (c) 2014 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/selection.html">
+<link rel="import" href="/tracing/timeline_track_view.html">
+<link rel="import" href="/tracing/trace_model/slice.html">
+<link rel="import" href="/tracing/tracks/slice_track.html">
+
+<script>
 'use strict';
-
-tvcm.require('tracing.selection');
-tvcm.require('tracing.timeline_track_view');
-tvcm.require('tracing.trace_model.slice');
-tvcm.require('tracing.tracks.slice_track');
 
 tvcm.unittest.testSuite('tracing.tracks.slice_track_test', function() {
   var Selection = tracing.Selection;
@@ -24,3 +28,5 @@ tvcm.unittest.testSuite('tracing.tracks.slice_track_test', function() {
     assertEquals(slice, sel[0]);
   });
 });
+</script>
+
