--- a/trunk/trace_viewer/tracing/tracks/async_slice_group_track_test.html
+++ b/trunk/trace_viewer/tracing/tracks/async_slice_group_track_test.html
@@ -1,12 +1,16 @@
-// Copyright (c) 2013 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/test_utils.html">
+<link rel="import" href="/tracing/timeline_track_view.html">
+<link rel="import" href="/tracing/trace_model.html">
+
+<script>
 'use strict';
-
-tvcm.require('tracing.test_utils');
-tvcm.require('tracing.timeline_track_view');
-tvcm.require('tracing.trace_model');
 
 tvcm.unittest.testSuite('tracing.tracks.async_slice_group_track_test', function() { // @suppress longLineCheck
   var AsyncSliceGroup = tracing.trace_model.AsyncSliceGroup;
@@ -136,3 +140,5 @@ tvcm.unittest.testSuite('tracing.tracks.async_slice_group_track_test', function(
     assertEquals(g.slices[1], subGroups[1].slices[0]);
   });
 });
+</script>
+
