--- a/trunk/trace_viewer/tracing/tracks/cpu_track.html
+++ b/trunk/trace_viewer/tracing/tracks/cpu_track.html
@@ -1,13 +1,18 @@
-// Copyright (c) 2012 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/tracks/container_track.html">
+<link rel="import" href="/tracing/tracks/slice_track.html">
+<link rel="import" href="/tracing/filter.html">
+<link rel="import" href="/tracing/trace_model.html">
+
+<script>
 'use strict';
 
-tvcm.require('tracing.tracks.container_track');
-tvcm.require('tracing.tracks.slice_track');
-tvcm.require('tracing.filter');
-tvcm.require('tracing.trace_model');
 tvcm.require('tvcm.ui');
 
 tvcm.exportTo('tracing.tracks', function() {
@@ -110,3 +115,5 @@ tvcm.exportTo('tracing.tracks', function() {
     CpuTrack: CpuTrack
   };
 });
+</script>
+
