--- a/trunk/trace_viewer/tracing/tracks/drawing_container_perf_test.html
+++ b/trunk/trace_viewer/tracing/tracks/drawing_container_perf_test.html
@@ -1,13 +1,17 @@
-// Copyright (c) 2013 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/importer.html">
+<link rel="import" href="/tracing/timeline_view.html">
+<link rel="import" href="/tracing/timeline_viewport.html">
+<link rel="import" href="/tracing/trace_model.html">
+
+<script>
 'use strict';
-
-tvcm.require('tracing.importer');
-tvcm.require('tracing.timeline_view');
-tvcm.require('tracing.timeline_viewport');
-tvcm.require('tracing.trace_model');
 
 tvcm.unittest.testSuite('tracing.tracks.drawing_container_perf_test', function() {  // @suppress longLineCheck
   function getSynchronous(url) {
@@ -94,3 +98,5 @@ tvcm.unittest.testSuite('tracing.tracks.drawing_container_perf_test', function()
         }, val);
   });
 });
+</script>
+
