--- a/trunk/trace_viewer/tracing/tracks/object_instance_track.html
+++ b/trunk/trace_viewer/tracing/tracks/object_instance_track.html
@@ -1,15 +1,20 @@
-// Copyright (c) 2012 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="stylesheet" href="/tracing/tracks/object_instance_track.css">
+
+<link rel="import" href="/tracing/trace_model/event.html">
+<link rel="import" href="/tracing/tracks/heading_track.html">
+<link rel="import" href="/tracing/color_scheme.html">
+
+<script>
 'use strict';
 
-tvcm.requireStylesheet('tracing.tracks.object_instance_track');
-
 tvcm.require('tvcm.sorted_array_utils');
-tvcm.require('tracing.trace_model.event');
-tvcm.require('tracing.tracks.heading_track');
-tvcm.require('tracing.color_scheme');
 tvcm.require('tvcm.ui');
 
 tvcm.exportTo('tracing.tracks', function() {
@@ -280,3 +285,5 @@ tvcm.exportTo('tracing.tracks', function() {
     ObjectInstanceTrack: ObjectInstanceTrack
   };
 });
+</script>
+
