--- a/trunk/trace_viewer/tracing/tracks/object_instance_track_test.html
+++ b/trunk/trace_viewer/tracing/tracks/object_instance_track_test.html
@@ -1,16 +1,20 @@
-// Copyright (c) 2013 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/test_utils.html">
+<link rel="import" href="/tracing/selection.html">
+<link rel="import" href="/tracing/trace_model/event.html">
+<link rel="import" href="/tracing/trace_model/object_collection.html">
+<link rel="import" href="/tracing/timeline_viewport.html">
+<link rel="import" href="/tracing/tracks/drawing_container.html">
+<link rel="import" href="/tracing/tracks/object_instance_track.html">
+
+<script>
 'use strict';
-
-tvcm.require('tracing.test_utils');
-tvcm.require('tracing.selection');
-tvcm.require('tracing.trace_model.event');
-tvcm.require('tracing.trace_model.object_collection');
-tvcm.require('tracing.timeline_viewport');
-tvcm.require('tracing.tracks.drawing_container');
-tvcm.require('tracing.tracks.object_instance_track');
 
 tvcm.unittest.testSuite('tracing.tracks.object_instance_track_test', function() { // @suppress longLineCheck
   var Selection = tracing.Selection;
@@ -98,3 +102,5 @@ tvcm.unittest.testSuite('tracing.tracks.object_instance_track_test', function() 
     });
   });
 });
+</script>
+
