--- a/trunk/trace_viewer/tracing/tracks/rect_track_test.html
+++ b/trunk/trace_viewer/tracing/tracks/rect_track_test.html
@@ -1,13 +1,18 @@
-// Copyright (c) 2014 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/test_utils.html">
+<link rel="import" href="/tracing/trace_model/slice.html">
+<link rel="import" href="/tracing/timeline_track_view.html">
+<link rel="import" href="/tracing/draw_helpers.html">
+
+<script>
 'use strict';
 
-tvcm.require('tracing.test_utils');
-tvcm.require('tracing.trace_model.slice');
-tvcm.require('tracing.timeline_track_view');
-tvcm.require('tracing.draw_helpers');
 tvcm.require('tvcm.ui.dom_helpers');
 
 tvcm.unittest.testSuite('tracing.tracks.rect_track_test', function() {
@@ -371,3 +376,5 @@ tvcm.unittest.testSuite('tracing.tracks.rect_track_test', function() {
     assertEquals(0, sel.length);
   });
 });
+</script>
+
