--- a/trunk/trace_viewer/tracing/tracks/ruler_track.html
+++ b/trunk/trace_viewer/tracing/tracks/ruler_track.html
@@ -1,25 +1,28 @@
-// Copyright (c) 2012 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="stylesheet" href="/tracing/tracks/ruler_track.css">
+
+<link rel="import" href="/tracing/constants.html">
+<link rel="import" href="/tracing/tracks/track.html">
+<link rel="import" href="/tracing/tracks/heading_track.html">
+<link rel="import" href="/tracing/draw_helpers.html">
+
+<script>
 'use strict';
 
-tvcm.requireStylesheet('tracing.tracks.ruler_track');
-
-tvcm.require('tracing.constants');
-tvcm.require('tracing.tracks.track');
-tvcm.require('tracing.tracks.heading_track');
-tvcm.require('tracing.draw_helpers');
 tvcm.require('tvcm.ui');
 
 tvcm.exportTo('tracing.tracks', function() {
-
   /**
    * A track that displays the ruler.
    * @constructor
    * @extends {HeadingTrack}
    */
-
   var RulerTrack = tvcm.ui.define('ruler-track', tracing.tracks.HeadingTrack);
 
   var logOf10 = Math.log(10);
@@ -350,3 +353,5 @@ tvcm.exportTo('tracing.tracks', function() {
     RulerTrack: RulerTrack
   };
 });
+</script>
+
