--- a/trunk/trace_viewer/tracing/tracks/ruler_track_test.html
+++ b/trunk/trace_viewer/tracing/tracks/ruler_track_test.html
@@ -1,13 +1,17 @@
-// Copyright (c) 2012 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/test_utils.html">
+<link rel="import" href="/tracing/timeline_viewport.html">
+<link rel="import" href="/tracing/tracks/drawing_container.html">
+<link rel="import" href="/tracing/tracks/ruler_track.html">
+
+<script>
 'use strict';
-
-tvcm.require('tracing.test_utils');
-tvcm.require('tracing.timeline_viewport');
-tvcm.require('tracing.tracks.drawing_container');
-tvcm.require('tracing.tracks.ruler_track');
 
 tvcm.unittest.testSuite('tracing.tracks.ruler_track_test', function() {
   test('instantiate', function() {
@@ -27,3 +31,5 @@ tvcm.unittest.testSuite('tracing.tracks.ruler_track_test', function() {
     track.viewport.setDisplayTransformImmediately(dt);
   });
 });
+</script>
+
