--- a/trunk/trace_viewer/tracing/tracks/sample_track.html
+++ b/trunk/trace_viewer/tracing/tracks/sample_track.html
@@ -1,13 +1,16 @@
-// Copyright (c) 2014 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/tracks/rect_track.html">
+
+<script>
 'use strict';
 
-tvcm.require('tracing.tracks.rect_track');
-
 tvcm.exportTo('tracing.tracks', function() {
-
   /**
    * A track that displays an array of Sample objects.
    * @constructor
@@ -41,3 +44,5 @@ tvcm.exportTo('tracing.tracks', function() {
     SampleTrack: SampleTrack
   };
 });
+</script>
+
