--- a/trunk/trace_viewer/tracing/tracks/sample_track_test.html
+++ b/trunk/trace_viewer/tracing/tracks/sample_track_test.html
@@ -1,14 +1,18 @@
-// Copyright (c) 2014 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/selection.html">
+<link rel="import" href="/tracing/timeline_track_view.html">
+<link rel="import" href="/tracing/trace_model/sample.html">
+<link rel="import" href="/tracing/trace_model/stack_frame.html">
+<link rel="import" href="/tracing/tracks/sample_track.html">
+
+<script>
 'use strict';
-
-tvcm.require('tracing.selection');
-tvcm.require('tracing.timeline_track_view');
-tvcm.require('tracing.trace_model.sample');
-tvcm.require('tracing.trace_model.stack_frame');
-tvcm.require('tracing.tracks.sample_track');
 
 tvcm.unittest.testSuite('tracing.tracks.sample_track_test', function() {
   var Selection = tracing.Selection;
@@ -28,3 +32,5 @@ tvcm.unittest.testSuite('tracing.tracks.sample_track_test', function() {
     assertEquals(sample, sel[0]);
   });
 });
+</script>
+
