--- a/trunk/trace_viewer/tracing/tracks/slice_group_track_test.html
+++ b/trunk/trace_viewer/tracing/tracks/slice_group_track_test.html
@@ -1,12 +1,16 @@
-// Copyright (c) 2013 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/test_utils.html">
+<link rel="import" href="/tracing/timeline_track_view.html">
+<link rel="import" href="/tracing/trace_model/slice_group.html">
+
+<script>
 'use strict';
-
-tvcm.require('tracing.test_utils');
-tvcm.require('tracing.timeline_track_view');
-tvcm.require('tracing.trace_model.slice_group');
 
 tvcm.unittest.testSuite('tracing.tracks.slice_group_track_test', function() {
   var SliceGroup = tracing.trace_model.SliceGroup;
@@ -209,3 +213,5 @@ tvcm.unittest.testSuite('tracing.tracks.slice_group_track_test', function() {
     assertTrue(track.hasVisibleContent);
   });
 });
+</script>
+
