--- a/trunk/trace_viewer/tracing/tracks/stacked_bars_track.html
+++ b/trunk/trace_viewer/tracing/tracks/stacked_bars_track.html
@@ -1,21 +1,24 @@
-// Copyright (c) 2013 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/tracks/heading_track.html">
+<link rel="import" href="/tracing/color_scheme.html">
+
+<script>
 'use strict';
 
-tvcm.require('tracing.tracks.heading_track');
-tvcm.require('tracing.color_scheme');
 tvcm.require('tvcm.ui');
 
 tvcm.exportTo('tracing.tracks', function() {
-
   /**
    * A track that displays traces as stacked bars.
    * @constructor
    * @extends {HeadingTrack}
    */
-
   var StackedBarsTrack = tvcm.ui.define(
       'stacked-bars-track', tracing.tracks.HeadingTrack);
 
@@ -110,3 +113,5 @@ tvcm.exportTo('tracing.tracks', function() {
     StackedBarsTrack: StackedBarsTrack
   };
 });
+</script>
+
