--- a/trunk/trace_viewer/tracing/tracks/thread_track.html
+++ b/trunk/trace_viewer/tracing/tracks/thread_track.html
@@ -1,22 +1,26 @@
-// Copyright (c) 2012 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="stylesheet" href="/tracing/tracks/thread_track.css">
+
+<link rel="import" href="/tracing/tracks/container_track.html">
+<link rel="import" href="/tracing/tracks/sample_track.html">
+<link rel="import" href="/tracing/tracks/slice_track.html">
+<link rel="import" href="/tracing/tracks/slice_group_track.html">
+<link rel="import" href="/tracing/tracks/async_slice_group_track.html">
+<link rel="import" href="/tracing/filter.html">
+
+<script>
 'use strict';
 
-tvcm.requireStylesheet('tracing.tracks.thread_track');
-
-tvcm.require('tracing.tracks.container_track');
-tvcm.require('tracing.tracks.sample_track');
-tvcm.require('tracing.tracks.slice_track');
-tvcm.require('tracing.tracks.slice_group_track');
-tvcm.require('tracing.tracks.async_slice_group_track');
-tvcm.require('tracing.filter');
 tvcm.require('tvcm.ui');
 tvcm.require('tvcm.iteration_helpers');
 
 tvcm.exportTo('tracing.tracks', function() {
-
   /**
    * Visualizes a Thread using a series of of SliceTracks.
    * @constructor
@@ -222,3 +226,5 @@ tvcm.exportTo('tracing.tracks', function() {
     ThreadTrack: ThreadTrack
   };
 });
+</script>
+
