--- a/trunk/trace_viewer/tracing/tracks/thread_track_test.html
+++ b/trunk/trace_viewer/tracing/tracks/thread_track_test.html
@@ -1,13 +1,18 @@
-// Copyright (c) 2013 The Chromium Authors. All rights reserved.
-// Use of this source code is governed by a BSD-style license that can be
-// found in the LICENSE file.
+<!DOCTYPE html>
+<!--
+Copyright (c) 2013 The Chromium Authors. All rights reserved.
+Use of this source code is governed by a BSD-style license that can be
+found in the LICENSE file.
+-->
 
+<link rel="import" href="/tracing/test_utils.html">
+<link rel="import" href="/tracing/timeline_track_view.html">
+<link rel="import" href="/tracing/trace_model/instant_event.html">
+<link rel="import" href="/tracing/tracks/thread_track.html">
+
+<script>
 'use strict';
 
-tvcm.require('tracing.test_utils');
-tvcm.require('tracing.timeline_track_view');
-tvcm.require('tracing.trace_model.instant_event');
-tvcm.require('tracing.tracks.thread_track');
 tvcm.require('tvcm.ui.dom_helpers');
 
 tvcm.unittest.testSuite('tracing.tracks.thread_track_test', function() {
@@ -163,3 +168,5 @@ tvcm.unittest.testSuite('tracing.tracks.thread_track_test', function() {
     assertTrue(2, t1.samples.length);
   });
 });
+</script>
+
