--- a/trunk/trace_viewer/tracing/importer/zip_importer.html
+++ b/trunk/trace_viewer/tracing/importer/zip_importer.html
@@ -7,7 +7,7 @@ found in the LICENSE file.
 
 <script src="/jszip.js"></script>
 <script src="/jszip-load.js"></script>
-<script src="/jszip-inflate.js"</script>
+<script src="/jszip-inflate.js"></script>
 
 <link rel="import" href="/tracing/importer/importer.html">
 <link rel="import" href="/tracing/importer/gzip_importer.html">
@@ -65,4 +65,3 @@ tvcm.exportTo('tracing.importer', function() {
   };
 });
 </script>
-
