--- a/trunk/examples/trace_viewer.html
+++ b/trunk/examples/trace_viewer.html
@@ -41,6 +41,7 @@ found in the LICENSE file.
   </x-timeline-view>
 
   <script>
+  'use strict';
   tvcm.require('tracing.timeline_view');
   tvcm.require('tracing.importer');
   </script>
