--- a/trunk/examples/chrome_inspect_test_shell.html
+++ b/trunk/examples/chrome_inspect_test_shell.html
@@ -33,6 +33,8 @@ found in the LICENSE file.
 </head>
 <body>
   <script>
+  'use strict';
+
   tvcm.require('about_tracing.profiling_view');
   </script>
   <script>
